k8s_objects/nginxdemo-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    label: nginxdemo
  name: nginx-deploy
