k8s_objects/nginxdemo-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-ingress-1
  namespace: nginx-deploy
  annotations:
#    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: static-ip-1
    kubernetes.io/ingress.allow-http: "true"
    cert-manager.io/issuer: letsencrypt-prod
#    acme.cert-manager.io/http01-ingress-class: "gce"
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  tls:
  - hosts:
    - nginx.everon.dns-cloud.net
    secretName: tls-secret-1
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: nginxdemo-service
          servicePort: 6000
